@@ -8,13 +8,9 @@
         - A rare planet that can only be reached by meeting certain criteria.
 * Different temperatures for day and night.
 * Random alien encounters that cause various things to happen.
-* An "Omnitool" capable of harvesting specific resources.
 * Interaction with Modular Powersuits.
 * Interaction with Forestry.
     * Special hives that generate on a certain planet. Space bees!
 * Planet LV-426 with Facehuggers from Alien.
 * Pizza Planet?
-* Findable "lore" for the mod to create a story.
-    - Lore Blocks that are only inside space stations.
-        - Give Lore Books when right-clicked from a randomized list.
-* 
+* ?
