@@ -12,12 +12,13 @@ import net.minecraft.nbt.NBTTagString;
 import net.minecraft.util.EnumFacing;
 import net.minecraft.util.EnumHand;
 import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.text.ITextComponent;
+import net.minecraft.util.text.TextComponentString;
 import net.minecraft.util.text.TextFormatting;
 import net.minecraft.world.World;
 import zollerngalaxy.core.ZollernGalaxyCore;
 import zollerngalaxy.core.enums.EnumBlockType;
 import zollerngalaxy.items.ZGItems;
-import zollerngalaxy.lib.helpers.ZGHelper;
 import zollerngalaxy.proxy.IProxy;
 import zollerngalaxy.util.LoreBook;
 import zollerngalaxy.util.ZGLore;
@@ -38,27 +39,34 @@ public class LoreBlock extends ZGBlockBase {
 			EnumFacing facing, float hitX, float hitY, float hitZ) {
 		if (!worldIn.isRemote) {
 			if (playerIn.getHeldItem(hand).getItem() == ZGItems.OMNITOOL) {
-				LoreBook loreBook = ZGLore.getRandomLoreBook();
-				ItemStack book = new ItemStack(Items.WRITTEN_BOOK);
-				
-				NBTTagCompound nbt = new NBTTagCompound();
-				NBTTagList bookPages = new NBTTagList();
-				book.setTagInfo("author", new NBTTagString("Zollern Wolf"));
-				book.setTagInfo("title", new NBTTagString(loreBook.getTitle()));
-				
-				List<String> pages = loreBook.getPages();
-				
-				for (int s = 0; s < pages.size(); s++) {
-					ZGHelper.Log("Page " + s + ": " + pages.get(s));
-					bookPages.appendTag(new NBTTagString(pages.get(s)));
+				try {
+					LoreBook loreBook = ZGLore.getRandomLoreBook();
+					ItemStack book = new ItemStack(Items.WRITTEN_BOOK);
+					
+					NBTTagCompound nbt = new NBTTagCompound();
+					NBTTagList bookPages = new NBTTagList();
+					book.setTagInfo("author", new NBTTagString("Zollern Wolf"));
+					book.setTagInfo("title", new NBTTagString(loreBook.getTitle()));
+					
+					List<String> pages = loreBook.getPages();
+					
+					pages.forEach((String page) -> {
+						ITextComponent cmp = new TextComponentString(page);
+						String strPage = ITextComponent.Serializer.componentToJson(cmp);
+						NBTTagString strNBT = new NBTTagString(strPage);
+						bookPages.appendTag(strNBT);
+					});
+					
+					NBTTagCompound cmp = book.getTagCompound();
+					cmp.setTag("pages", bookPages);
+					
+					playerIn.addItemStackToInventory(book);
+					worldIn.setBlockState(pos, Blocks.AIR.getDefaultState());
+					proxy.sendChatMessage(playerIn,
+							TextFormatting.GOLD + "You have discovered lore! Book: " + loreBook.getTitle());
+				} catch (IllegalArgumentException ex) {
+					proxy.sendChatMessage(playerIn, TextFormatting.RED + "No lore was found..");
 				}
-				
-				book.getTagCompound().setTag("pages", bookPages);
-				
-				playerIn.addItemStackToInventory(book);
-				worldIn.setBlockState(pos, Blocks.AIR.getDefaultState());
-				proxy.sendChatMessage(playerIn,
-						TextFormatting.GOLD + "You have discovered lore! Book: " + loreBook.getTitle());
 			} else {
 				proxy.sendChatMessage(playerIn, TextFormatting.AQUA + "You will need an Omnitool to access this.");
 			}
