@@ -5,12 +5,16 @@ Zollern Galaxy v2.0.8
 * Updated Zollern Galaxy to support and require latest Galacticraft mod version.
 * All planets now have space stations with varying recipes.
     - You will need higher-tier rockets to access these space stations.
-* Fixed issue with planets disappearing when zoomed in
+* Fixed issue with planets disappearing when zoomed in.
     - If this issue still occurs for you, set the Z coordinate for the star systems to 0.0.
     - New players should be unaffected.
 * Modified default coordinates of Nova star system.
 * Created a specific block for Space Stations.
+* Began a story for the mod through findable lore.
 * Created the Lore Block.
     - Only spawns in Space Stations.
     - Gives the Player a random Lore Book and then disappears.
+    - Block cannot be broken through normal means.
+    - The Player can only access it by right-clicking with an Omnitool.
+    - The Player will not get the same lore book twice IN THE SAME SESSION - if the Player leaves or the game is reset, the pool regenerates.
 * 
